--- a/src/UserControls/AddEditSecret.xaml
+++ b/src/UserControls/AddEditSecret.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:GitHubActionsVS.Helpers"
         Title="Add/Edit Secret" Height="220" Width="500" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner"
+        Icon="pack://application:,,,/GitHubActionsVS;component/Resources/github.png"
         xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
         xmlns:resx="clr-namespace:GitHubActionsVS.Resources"
-        toolkit:Themes.UseVsTheme="True" Icon="{x:Null}">
+        toolkit:Themes.UseVsTheme="True">
     <Grid Margin="0,10,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
