Add workflow input handling and YAML support
Updated `GitHubActionsVS.csproj` to include new source files: `StringHelpers.cs`, `YamlHelpers.cs`, `InputMetadata.cs`, and `Workflow.cs`. Added `YamlDotNet` package reference. Introduced `WorkflowInputsDialog.xaml` for user input and modified `GHActionsToolWindow` to integrate this dialog. Added utility classes for Base64 checking and YAML alias resolution. Enhanced input metadata representation and refactored code for improved readability and maintainability.

--- a/src/ToolWindows/GHActionsToolWindow.xaml
+++ b/src/ToolWindows/GHActionsToolWindow.xaml
@@ -132,7 +132,7 @@
                     <Expander Header="{x:Static resx:UIStrings.HEADER_CURRENT_BRANCH}" x:Name="CurrentBranchExpander" FontWeight="Bold" ToolTipService.ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Header}">
                         <TreeView BorderThickness="0" FontWeight="Normal" PreviewMouseWheel="HandlePreviewMouseWheel" x:Name="tvCurrentBranch" ItemTemplate="{StaticResource TreeViewRunNodeDataTemplate}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
                             <TreeView.Resources>
-                                <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Static shell:VsResourceKeys.ThemedDialogTreeViewItemStyleKey}}">
+                                <Style TargetType="{x:Type TreeViewItem}">
                                     <EventSetter Event="MouseDoubleClick" Handler="JobItem_MouseDoubleClick"/>
                                 </Style>
                             </TreeView.Resources>
@@ -147,7 +147,7 @@
                             <TreeViewItem ToolTipService.ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Header}" Header="{x:Static resx:UIStrings.HEADER_SECRETS}" HeaderTemplate="{StaticResource SecretsHeaderTemplate}">
                                 <TreeViewItem ToolTipService.ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Header}" x:Name="tvSecrets" HeaderTemplate="{StaticResource RepoSecretsHeaderTemplate}">
                                     <TreeViewItem.Resources>
-                                        <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Static shell:VsResourceKeys.ThemedDialogTreeViewItemStyleKey}}">
+                                        <Style TargetType="{x:Type TreeViewItem}">
                                             <EventSetter Event="MouseDoubleClick" Handler="Secret_MouseDoubleClick"/>
                                         </Style>
                                     </TreeViewItem.Resources>
